# blocktree-experiments

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  accessonly.cpp  accessonlyhelper.h  build_server.sh  calclz.cpp  clean.sh  compbench.cpp  fptest.cpp  helper.h  littleserver  littletextserver  main.cpp  parallelbench  parallelbench.cpp  parallelhelper.h  quickrun.sh  run.sh  run2.sh  servercalclz.sh  serverrun  serverrunaccessonly  templatetest.cpp
blockTree/: BlockTree.h  CMakeLists.txt  FingerPrintBlockTree.cpp  FingerPrintBlockTree.h
blockTree/blocks/: Block.h  LeafBlock.h  MarkedBlock.h  UnmarkedBlock.h
naiveBlockTree/: CMakeLists.txt  HashString.cpp  LBlock.h  MBlock.cpp  MBlock.h  MersenneHash.h  MersenneRabinKarp.h  NBlock.h  UBlock.cpp  UBlock.h  naiveBlockTree.cpp  naiveBlockTree.h
notebooks/: first_nb.ipynb  i10pc137rep.ipynb  nonrep.ipynb  rep-Copy1.ipynb  rep.ipynb
notebooks/.ipynb_checkpoints/: nonrep-checkpoint.ipynb
notebooks/data/: nonreptitive_runs.csv  nonreptitive_runs32MB.csv  rep3run.csv  repititive_runs.csv  reprun112.csv  repruni10pc137.csv  totalrun.csv
